.provarCaches/00Df2000001KKNJEA4/objects/LiveText__SMS_Message__c.object
<CustomObject>
    <description>An SMS message</description>
    <fields>
        <fullName>LiveText__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account related to this message</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SMS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to this message</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SMS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__EnforceObjectPresence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked and the object specified by ObjectId is is deleted, the send will fail.</description>
        <label>EnforceObjectPresence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Error_Message__c</fullName>
        <description>Any error message associated with this SMS</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Is_ITR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if it&apos;s from ITR</description>
        <label>Is ITR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveText__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead related to this message</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SMS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__LiveText_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LiveMessage number to send this message from</description>
        <label>LiveMessage Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipLabel>SMS Messages</relationshipLabel>
        <relationshipName>SMS_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Message_Status__c</fullName>
        <description>Status of the message</description>
        <label>Message Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Message__c</fullName>
        <description>Message to send</description>
        <label>Message</label>
        <length>2350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__Object_Id__c</fullName>
        <description>Id of the object related to this message</description>
        <label>Object Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Opt_in_Status__c</fullName>
        <description>Opt-in status of the subscriber at the time of sending the message</description>
        <label>Opt-in Status</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__To_Phone_Number__c</fullName>
        <description>Phone number to send the message to</description>
        <label>To Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LiveText__Use_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, queueable queue will be used to send message.</description>
        <label>Use Queueable</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS Message</label>
    <nameField>
        <label>SMS Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>